--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body{
     background-image:url("https://images.unsplash.com/photo-1492138623748-a1b1f758a762?auto=format&fit=crop&q=80&w=1000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8d2V0JTIwd2luZG93fGVufDB8fDB8fHww");
     font-family: sans-serif;
+     width: 100wv;
+   height: 100vh;
+   background-size: cover;
 }
 .container{
     background-image: url("https://4kwallpapers.com/images/wallpapers/blue-background-768x1024-10208.jpg");
