--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body{
      display:block;
      margin:0 auto;
      border-radius: 10px;
+    color: rgb(16,15,33);
     
      
 }
@@ -20,6 +21,7 @@ select{
     padding: 10px;
     border-radius:10px;
     font-size: 18px;
+    background: rgb(115, 34, 57);
 
 }
 h1{
